--- a/static/css/sb-admin-2.css
+++ b/static/css/sb-admin-2.css
@@ -11,8 +11,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --blue: #4e73df;
-  --indigo: #6610f2;
+  --blue: #0ee035ce;
+  --indigo: #10f214;
   --purple: #6f42c1;
   --pink: #e83e8c;
   --red: #e74a3b;
